--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
 		"jest": "29.3.1",
 		"jest-environment-jsdom": "^29.3.1",
 		"jest-styled-components": "7.1.1",
-		"typescript": "3.8.3"
+		"typescript": "4.3.2"
 	},
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"test": "jest src --maxWorkers=50%",
-		"test:problem": "jest src --maxWorkers=50% src/components/1 --watch",
-		"test:solution": "jest src --maxWorkers=50% src/components/1 --watch"
+		"test": "jest src",
+		"test:problem": "jest src src/components/problem --watch",
+		"test:solution": "jest src src/components/solution --watch"
 	}
 }
